# vdetect

./: LICENSE  README.md  pyproject.toml
src/vdetect/: motion_vdetect.py
