[build-system]
requires = ["setuptools>=60", "numpy>=2", "opencv-python>=4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[project]
name = "vdetect"
version = "0.1.0"
description = "Video based home surveillant system based on Raspberry Pis and ESP32s"
authors = [
	{name = "Tao Liu", email = "vladimir.liu@gmail.com"}
	]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
    "numpy>=2",
    "opencv-python>=4"
]

[project.urls]
Homepage = "https://vdetect.biomisc.org"
Repository = "https://github.com/taoliu/vdetect/"

# define the console scripts
[project.scripts]
vdetect = "vdetect.motion_vdetect.vdetect:main"
